Prevent the icon from overflowing to right side of page

--- a/cotoami_desktop/ui/assets/css/_stock.scss
+++ b/cotoami_desktop/ui/assets/css/_stock.scss
@@ -13,6 +13,18 @@ section.stock {
     }
   }
 
+  // prevent the icon from overflowing to right side of page 
+  &.folded>.pane-toggle {
+    left: auto;
+    right: 0;
+
+    button {
+      left: auto;
+      right: 0;
+      overflow: hidden;
+    }
+  }
+
   section.coto-catalog {
     flex: 1;
     min-width: 0; // let this item shrink below the content size
